# SimpliView

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  README.md  app.manifest  build.rs  gemini-system.md
.cargo/: config.toml
resources/: simpliview.manifest  simpliview.rc
src/: app.rs  d2d.rs  dialogs.rs  document.rs  icons.rs  main.rs  menu.rs  pdf.rs  registration.rs  scroll.rs  statusbar.rs  theme.rs  toolbar.rs  utils.rs  view_window.rs  wic.rs  window.rs
