[package]
name = "simpliview"
version = "1.1.2"
edition = "2021"
authors = ["SimpliView"]
description = "High-performance PDF/Image viewer for Windows"
license = "MIT"

[[bin]]
name = "SimpliView"
path = "src/main.rs"

[dependencies]
windows = { version = "0.48", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_Dwm",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Globalization",
    "Data_Pdf",
    "Storage",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",
]}
parking_lot = "0.12"
once_cell = "1.19"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
